toolchain/parse/src/expression/snapshots/knot_parse__expression__tests__binary_exponent_operation.snap
---
source: toolchain/parse/src/expression/mod.rs
expression: ast
---
Expression(
    Node(
        BinaryOperation(
            Exponent,
            Expression(
                Node(
                    Primitive(
                        Nil,
                    ),
                    Range(
                        Point(
                            1,
                            1,
                        ),
                        Point(
                            1,
                            3,
                        ),
                    ),
                    (),
                ),
            ),
            Expression(
                Node(
                    Primitive(
                        Nil,
                    ),
                    Range(
                        Point(
                            1,
                            7,
                        ),
                        Point(
                            1,
                            9,
                        ),
                    ),
                    (),
                ),
            ),
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                9,
            ),
        ),
        (),
    ),
)
